# the_binding_of_ferris

./: .gitignore  Cargo.toml  readme.md  scorpion.ron
assets/: scorpion.ron
assets/shaders/: water.frag  water.vert
config/: display.ron
resources/: conf.toml
src/: animation.rs  attribute.rs  behaviors.rs  components.rs  init.rs  input.rs  inputs.rs  isaac.rs  main.rs  model.rs  physic.rs  player.rs  render.rs  rendering.rs  systems.rs  ui.rs  utils.rs  weapon.rs
src/animation/: animation_graph.rs  mod.rs  state.rs
src/components/: mod.rs  physics.rs  player.rs  tears.rs
src/items/: mod.rs  tiny_planet.rs
src/model/: behaviors.rs  camera.rs  mod.rs  player.rs  tears.rs
src/systems/: camera.rs  memory.rs  mod.rs  physics.rs  player_input.rs  shooting.rs
src/utils/: mod.rs
src/weapons/: default.rs  mod.rs
