[package]
name = "isaac_tears"
version = "0.1.0"
authors = ["Chris Janaqi <chris.janaqi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = {version = "0.3", features = ["extended-tuple-impls"]}
ggez = "0.5"
log = "0.4"
env_logger = "0.8"

[profile.dev]
opt-level = 1
