[package]
name = "ferris_tears"
version = "0.1.0"
authors = ["Chris Janaqi <chris.janaqi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.4", features = ["serialize"]}
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
ron= "0.6"